<resources>
    <string name="app_name">BT</string>
    <string name="init_create">Create Wallet</string>
    <string name="import_value">Import Wallet</string>
    <string name="delete_value">Delete Wallet</string>
    <string name="no_delete_value">Cannot delete wallet if there is only one wallet.</string>
    <string name="no_delete_current_value">Cannot delete the current wallet.</string>
    <string name="delete_value_dialog">The wallet will be deleted, are you sure to delete it?</string>
    <string name="delete_confirm">Delete</string>
    <string name="init_create_desc">No wallet exists. It is used for the first time.</string>
    <string name="init_import">Import Wallet</string>
    <string name="init_import_desc">There is a wallet, which supports importing via mnemonic words, private key and other methods.</string>
    <string name="init_title">Multi-chain wallet</string>
    <string name="single_link">Single-chain wallet</string>
    <string name="init_title_desc">Polkadot, BTC, ETH, Solana and other mainstream public chains are supported</string>
    <string name="value">Wallet</string>
    <string name="convert">Flash swap</string>
    <string name="mine">Me</string>
    <string name="add_currency">Add coin</string>
    <string name="address_book">Address Book</string>
    <string name="language_change">Language</string>
    <string name="currency_unit">Currency Unit</string>
    <string name="about_us">About Us</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="none_address_info">No Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="add_success">Added Successfully</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="import_repeat">Imported to the wallet, repeated importing is not allowed</string>
    <string name="import_reimport">Import Again</string>
    <string name="create">Create</string>
    <string name="start">Enter BT Wallet</string>
    <string name="heading">Name</string>
    <string name="address_name">Please input Name</string>
    <string name="desc">Description</string>
    <string name="not_required">Optional</string>
    <string name="coin_is_has">Current coin exists</string>
    <string name="address">Address</string>
    <string name="address_as">You cannot transfer to yourself</string>
    <string name="address_edit">Edit address</string>
    <string name="name_null">Name can’t be empty</string>
    <string name="money_null">Quantity can’t be empty</string>
    <string name="money_exceed_max">Exceed assets currently owned</string>
    <string name="money_exceed_min_btc">Btc transfer must exceed or equal to 0.00000546</string>
    <string name="address_null">Address can’t be empty</string>
    <string name="delete">Delete</string>
    <string name="mnemonic_import">Mnemonic Import</string>
    <string name="mnemonic_wrong">Wrong sequence of mnemonic words, please check carefully</string>
    <string name="mnemonics_wrong">Wrong mnemonic words, please fill in the correct ones</string>
    <string name="key_import">Import Private Key</string>
    <string name="private_key">Private key</string>
    <string name="private_key_error">Please enter a valid private key address.</string>
    <string name="mnemonic_import_desc">Please fill in your mnemonic, separated by spaces</string>
    <string name="add_chain">Add Main Chain</string>
    <string name="key_import_desc1">Please choose the main chain wallet to be imported.</string>
    <string name="key_import_desc2">Please fill in the private key address of your %s main chain wallet.</string>
    <string name="channel">Import</string>
    <string name="english">English</string>
    <string name="current_version">Current Version</string>
    <string name="update_version">Version Update</string>
    <string name="latest_version">You have the latest version already.</string>
    <string name="cancel">Cancel</string>
    <string name="wallet_manager">Manage Wallets</string>
    <string name="update_immediately">Update Now</string>
    <string name="updating">Updating%s%%</string>
    <string name="install">Install</string>
    <string name="value_name">Wallet Name</string>
    <string name="nonewver">You have the latest version already.</string>
    <string name="check_update_failure">Failed to check update</string>
    <string name="trans_send">Transfer initiated, please check the progress later.</string>
    <string name="trans_error">Transaction failed, please try again later.</string>
    <string name="set_pwd">Set Password</string>
    <string name="plz_set_pwd">Please set password</string>
    <string name="plz_repwd">Please enter password again</string>
    <string name="pwd_rule">Please enter 8~16 characters, consisting of upper and lower case letters and numbers.</string>
    <string name="entered_pwd_differ">The two passwords entered do not match.</string>
    <string name="repwd">Repeat Password</string>
    <string name="input_wallet_name">Please enter the wallet name.</string>
    <string name="word_length">1-20 characters</string>
    <string name="create_agree1">I have read and agree to the <a href="https://s.vertu.com/meta-vertu/bts/?locale=en">Service Agreement</a>,<a href="https://s.vertu.com/meta-vertu/btp/?locale=en">Privacy Agreement</a></string>
    <string name="agree">agree</string>
    <string name="legal_statement">Terms and Conditions of Use</string>
    <string name="assets">Assets</string>
    <string name="all_assets">Total Assets（%s）</string>
    <string name="record">Records</string>
    <string name="collection">Deposit</string>
    <string name="transfer">Send</string>
    <string name="plz_wait">More main chain coins to be supported</string>
    <string name="creating">Create Walleting …</string>
    <string name="backup_now">Backup Now</string>
    <string name="backup_later">Backup Later</string>
    <string name="backup_mnemonic">Backup Mnemonic</string>
    <string name="mnemonic_no_standard">Non-standard mnemonic words</string>
    <string name="backup_key">Backup Private Key</string>
    <string name="backup_mnemonic_tips"> 1. Please do not take screenshots, share, etc. when connected to the Internet, so as to avoid property loss caused by illegal collection by third-party malware. \n\n2. The wallet server does not save your mnemonic words and other information, please make complete backup.</string>
    <string name="backup_key_tips">Please do not take screenshots, share, etc. when connected to the Internet, so as to avoid property loss caused by illegal collection by third-party malware.</string>
    <string name="create_success">Decentralized wallet has been created</string>
    <string name="tips">Tips</string>
    <string name="tips_content">The mnemonic is equal to all the control of the entire wallet, please keep it safe. \n\nIf the mnemonic is lost, it cannot be retrieved, please make sure to back it up.</string>
    <string name="funds">Deposit</string>
    <string name="pay">Payment</string>
    <string name="none_data">No Data</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_mnemonic">Confirm Mnemonic</string>
    <string name="backup_key_already">Private key backup completed, backup of mnemonic words is not allowed</string>
    <string name="safe_tips">Safety Precautions</string>
    <string name="safe_tips_detail">Your wallet has not been backed up. If you forget your password, delete your application or lose your mobile phone, your assets will be lost. Please back up your wallet immediately!</string>
    <string name="got_it">OK</string>
    <string name="meta_desc1">\u3000\u3000The identity on the blockchain is your only credential, and all services are authorized by your identity signature, so that no app can directly obtain your data.</string>
    <string name="meta_desc2">\u3000\u3000The private key in Vertu is the only credential for you to generate the wallet and DID, please keep it properly, or you can never get it back once it is lost.</string>
    <string name="meta_create">Create</string>
    <string name="meta_import">Import</string>
    <string name="jump">Skip</string>
    <string name="backup_complete">Backup Completed</string>
    <string name="mnemonic_tips">Please copy the following mnemonic words in order in a safe environment, and keep them properly</string>
    <string name="confirm_mnemonic_tips">Please click on the mnemonic words in order, and your backup has been confirmed to be correct.</string>
    <string name="address_code">Address QR Code</string>
    <string name="collection_address">Deposit Address</string>
    <string name="safety_tips">Safety Precautions</string>
    <string name="safety_tips_desc">Your wallet has not been backed up. If you forget your password, delete your application or lose your mobile phone, your assets will be lost. Please back up your wallet immediately!</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="transfer_address">Address</string>
    <string name="please_input_transfer_address">Please enter the transfer address</string>
    <string name="all">All</string>
    <string name="transfer_amount">Amount</string>
    <string name="amount">Amount</string>
    <string name="please_input_transfer_amount">Please enter the amount to be transferred</string>
    <string name="memo">Memo</string>
    <string name="remark">Remarks</string>
    <string name="optional">Optional</string>
    <string name="absenteeism_fee">Fee</string>
    <string name="slow">Slow\n%dGWEI</string>
    <string name="recommend">Recommended\n%dGWEI</string>
    <string name="fast">Fast\n%dGWEI</string>
    <string name="slow_time">Expected  \n10 minutes</string>
    <string name="recommend_time">Expected  \n3 minutes</string>
    <string name="fast_time">Expected  \n30 seconds</string>
    <string name="slow_btc">Slow\n%dsat/b</string>
    <string name="recommend_btc">Recommended\n%dsat/b</string>
    <string name="fast_btc">Fast\n%dsat/b</string>
    <string name="slow_time_btc">Expected  \n60 minutes</string>
    <string name="recommend_time_btc">Expected  \n30 minutes</string>
    <string name="fast_time_btc">Expected  \n10 minutes</string>
    <string name="customize">Customize</string>
    <string name="submit">Submit</string>
    <string name="please_input_password">Please enter password</string>
    <string name="password_error">Incorrect password</string>
    <string name="determine">OK</string>
    <string name="please_input_address">Please input Address</string>
    <string name="transfer_detail">Send Details</string>
    <string name="payment_address">Sending Address</string>
    <string name="payee_address">Deposit Address</string>
    <string name="hash_address">Transaction Hash</string>
    <string name="detail">Details</string>
    <string name="packing">Packing</string>
    <string name="packing_success">Success</string>
    <string name="query_detail">Inquiry Details</string>
    <string name="scan_result">Scan Results</string>
    <string name="scan_to_identify_content">Scan to identify contents：</string>
    <string name="cny">CNY</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="dapp">DApp</string>
    <string name="link_not_support">The current wallet does not support the DAPP</string>
    <string name="transfer_out">Transfer Out</string>
    <string name="transfer_in">Transfer In</string>
    <string name="rate">Exchange Rate</string>
    <string name="place_order">%s place an order</string>
    <string name="actual_credit">actual credit</string>
    <string name="trans_time">Transaction Time</string>
    <string name="fee">Fee %s</string>
    <string name="nomination">Nominate</string>
</resources>