<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.polkadot.bt.custom.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/currency_unit" />

    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/cny"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/cny"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/usd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/usd"
        app:layout_constraintTop_toBottomOf="@id/cny" />

    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/eur"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/eur"
        app:layout_constraintTop_toBottomOf="@id/usd" />

</androidx.constraintlayout.widget.ConstraintLayout>