<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.polkadot.bt.custom.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/language_change" />
    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/english"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/chinese"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/simplified_chinese"
        app:checked="false"
        app:layout_constraintTop_toBottomOf="@id/english" />


    <com.polkadot.bt.custom.RadioCheckItem
        android:id="@+id/ft_chinese"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:checkText="@string/traditional_chinese"
        app:layout_constraintTop_toBottomOf="@id/chinese" />

</androidx.constraintlayout.widget.ConstraintLayout>