<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.polkadot.bt.custom.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:rightText="@string/save"
        app:rightVisibility="visible"
        app:title="@string/add_address" />

    <TextView
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/type"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.polkadot.bt.custom.FunctionItem
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:drawable="@drawable/address_book"
        app:itemSubTextVisibility="gone"
        app:layout_constraintTop_toBottomOf="@id/type_text"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/type_filter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="#DCDCE0"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/heading"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_filter" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/address_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColorHint="#BCBCBE"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/heading_text"
        tools:layout_editor_absoluteX="20dp" />

    <View
        android:id="@+id/heading_filter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="#DCDCE0"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_filter" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/please_input_address"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColorHint="#BCBCBE"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/address_text" />

    <View
        android:id="@+id/address_filter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="#DCDCE0"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/desc"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_filter" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:hint="@string/not_required"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColorHint="#BCBCBE"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/desc_text" />

    <View
        android:id="@+id/desc_filter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="#DCDCE0"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_1b1b1c_corner_5_bg"
        android:textAllCaps="false"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>