<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/corners5_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/primary_text_color"
            android:text="@string/tips"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            tools:text="@string/link_not_support"
            android:textSize="13sp"
            android:textColor="@color/color6"/>
        <TextView
            android:id="@+id/tvClose"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/corners5_primary"
            android:text="@string/got_it"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>